# mono

./: .gitignore  conftest.old.py  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test.py
alembic/: env.py
alembic/versions/: 3469b7675046_initial_migration.py  42c9bd0f4b86_001_new_initial.py  43b4e70a4c45_added_abstract_model_question_model.py  4cbb416aaedb_added_new_table_answer_relations_answer_.py  78052010215a_added_relation_question_pack.py  82e4427882b7_add_pack_description.py  a56f9481785a_updated_models.py  ae9318a27401_updated_models.py  df7feeabb63d_added_tag_associations.py
app/: config.py  dao.py  database.py  models.py
app/quiz/: models.py
app/quiz/dao/: answer.py  mixins.py  pack.py  question.py  tag.py
app/quiz/routes/: answer.py  pack.py  question.py  tag.py
app/quiz/schemas/: answer.py  pack.py  question.py  tag.py
app/quiz/si_importer/: game_rounds_parser.py  pack_loader.py  routes.py  schemas.py
app/quiz/si_importer/tests/: fixtures.py  test_si_import.py
app/quiz/tests/: factories.py  fixtures.py  test_temp.py  test_views.py
app/tests/: test_models.py
app/tests/factories/: base.py
app/utils/: error_handler.py  exceptions.py
db/: db-setup.sql
frontend/mono-front/: README.md  package-lock.json  package.json  quasar.config.js
frontend/mono-front/src/components/: EssentialLink.vue
frontend/mono-front/src/layouts/: MainLayout.vue
frontend/mono-front/src/pages/: PackPage.vue
frontend/mono-front/src/router/: routes.ts
